Fixes navigation alignment issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -283,7 +283,6 @@ footer p {
 }
 
 .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
-  display: block;
   padding: 14px 20px;
   font-family: @font-swatch6-font-family;
   font-size: @font-swatch6-font-size;
@@ -322,7 +321,6 @@ footer p {
 }
 
 .widget.extendednavigation ul li.folder {
-  display: block;
   height: 100%;
   padding: 0 7px 0 0;
   cursor: pointer;
@@ -1851,7 +1849,7 @@ footer .widget.profile .twitter span {
   }
 
   .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
-      padding: 5px 0;
+      padding: 5px 18px;
       margin: 0;
   }
 
